add swagger2 support